apps/nats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: client
    - port: 8222
      targetPort: manage
    - port: 6222
      targetPort: cluster
