apps/nats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nats-ingresss
  labels:
    name: nats-ingresss
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/nats"
            backend:
              service:
                name: nats
                port:
                  number: 8222
